--- a/environment_back.yml
+++ b/environment_back.yml
@@ -4,7 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - cudatoolkit=11.3
+  - cudatoolkit=11.6
   - plyfile=0.8.1
   - python=3.7.13
   - pip=22.3.1
@@ -12,3 +12,6 @@ dependencies:
   - torchaudio=0.12.1
   - torchvision=0.13.1
   - tqdm
+  - pip:
+    - submodules/diff-gaussian-rasterization
+    - submodules/simple-knn
